<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>akrobat_imu</name>
  <version>1.0.0</version>
  <description>Package for the akrobat imu</description>

  <maintainer email="Karl.Franke@outlook.de">Karl Franke</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>

</package>
